--- a/sass/site/builder/_header.scss
+++ b/sass/site/builder/_header.scss
@@ -997,6 +997,11 @@ body.admin-bar .astra-cart-drawer {
 		z-index: 999;
 	}
 }
+@media (max-width: 545px ) {
+	.astra-cart-drawer.active {
+		width: 100%;
+	}
+}
 /** Cart CSS */
 .ast-header-break-point {
 	&.ast-woocommerce-cart-menu.astra-hfb-header,
